--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:targetSdkVersion="24" />
 
     <application
-        android:label="@string/ambient_display_gestures_title"
+        android:label="@string/ambient_display_title"
         android:persistent="true">
 
         <receiver android:name=".BootCompletedReceiver">
@@ -48,12 +48,8 @@
 
         <activity
             android:name=".doze.DozeSettingsActivity"
-            android:label="@string/ambient_display_gestures_title"
-            android:theme="@style/Theme.Main">
-            <intent-filter>
-                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+            android:label="@string/ambient_display_title"
+            android:theme="@style/Theme.SubSettingsBase">
         </activity>
 
     </application>
